// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has clickable rows styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c1:focus {
  border-color: #006296;
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c1:hover {
  background-color: #DBDEE1;
  cursor: pointer;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="button"
      tabindex="0"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="button"
      tabindex="0"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="button"
      tabindex="0"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has custom text alignment 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
        style="text-align:right"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
        style="text-align:center"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        role="cell"
        style="text-align:center"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        role="cell"
        style="text-align:center"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        role="cell"
        style="text-align:center"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has desktop styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has error rows styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
  background-color: #fcf8f9;
  border: 1px solid #CD2C23;
}

.c2 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has mobile styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) 0;
}

.c0 td {
  padding: var(--spacing-3x) 0;
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has rowNumbers styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class="eq-table__number-column"
        colspan="1"
        role="columnheader"
        scope="col"
      />
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        class="eq-table__number-column"
        role="cell"
      >
        1
      </td>
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        class="eq-table__number-column"
        role="cell"
      >
        2
      </td>
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        class="eq-table__number-column"
        role="cell"
      >
        3
      </td>
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has small rowSize styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-half) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sorting styles 1`] = `
.c2 {
  cursor: pointer;
  margin-right: var(--spacing-1x);
}

.c2:focus {
  outline: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="ascending"
        colspan="1"
        role="columnheader"
        scope="col"
        style="cursor:pointer"
        title="Toggle SortBy"
      >
        <div
          class="c1"
        >
          <button
            class="c2"
          >
            <svg
              color="#60666E"
              focusable="false"
              height="16"
              width="16"
            />
          </button>
          Column 1
        </div>
      </th>
      <th
        aria-sort="none"
        colspan="1"
        role="columnheader"
        scope="col"
        style="cursor:pointer"
        title="Toggle SortBy"
      >
        <div
          class="c1"
        >
          <button
            class="c2"
          >
            <svg
              color="#60666E"
              focusable="false"
              height="16"
              width="16"
            />
          </button>
          Column 2
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c3"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c3"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c3"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has striped styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c1:nth-child(odd) {
  background-color: #FAFAFA;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has tablet styles 1`] = `
.c1 {
  border-top: 1px solid #DBDEE1;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__number-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;
